More cleanup Show the correct shortcode options for field HTML settings Include a placeholder in the page dropdown Change default settings to fade in forms and use css grids for new installs Live update for radio/checkbox column count Fix lookup fields hiding all settings when selecting text type Better handling of dropping fields into collapsed page

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -1733,8 +1733,7 @@ h2.frm-h2 + .howto {
 	height: 50px;
 }
 
-a.frm_pro_tip,
-a.frm_pro_tip:hover {
+a.frm_pro_tip {
 	font-size: 14px;
 	border: 1px solid var(--blue-border);
 	display: inline-block;
@@ -1745,6 +1744,10 @@ a.frm_pro_tip:hover {
 	padding: 5px 15px;
 	margin: 0 auto;
 	line-height: 1.4;
+}
+
+a.frm_pro_tip:hover {
+	color: var(--dark-grey);
 }
 
 .frm_field_list .frm_pro_tip {
@@ -2444,6 +2447,40 @@ input[type="checkbox"] {
 	font-size: 14px;
 }
 
+/* Start copied front-end CSS */
+.horizontal_radio .frm_radio,
+.horizontal_radio .frm_checkbox {
+	margin-right: 5px;
+	display: inline-block;
+}
+
+.frm_form_field.frm_two_col .frm_opt_container,
+.frm_form_field.frm_three_col .frm_opt_container,
+.frm_form_field.frm_four_col .frm_opt_container{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-auto-rows: max-content;
+	grid-gap: 0 2.5%;
+}
+
+.frm_form_field.frm_three_col .frm_opt_container{
+	grid-template-columns: repeat(3, 1fr);
+}
+
+.frm_form_field.frm_four_col .frm_opt_container{
+	grid-template-columns: repeat(4, 1fr);
+}
+
+.frm_form_field.frm_two_col .frm_radio,
+.frm_form_field.frm_two_col .frm_checkbox,
+.frm_form_field.frm_three_col .frm_radio,
+.frm_form_field.frm_three_col .frm_checkbox,
+.frm_form_field.frm_four_col .frm_radio,
+.frm_form_field.frm_four_col .frm_checkbox{
+	grid-column-end: span 1;
+}
+/* End copied */
+
 .frm_wrap .with_frm_style .frm_checkbox input[type=checkbox],
 .frm_wrap .with_frm_style .frm_radio input[type=radio],
 .frm_wrap input[type=checkbox],
@@ -2926,6 +2963,14 @@ li.sortable-placeholder {
 
 .frm_single_option.ui-sortable-placeholder {
 	box-shadow: 20px -3px 0 1px var(--primary-color);
+}
+
+.frm-is-collapsed + .sortable-placeholder {
+	box-shadow: 2px -7px 0 1px var(--primary-color);
+}
+
+.edit_field_type_break.frm-page-collapsed ~ .frm-is-collapsed + .sortable-placeholder {
+	box-shadow: 2px 15px 0 1px var(--primary-color);
 }
 
 .frm_sorting > li.edit_field_type_end_divider:first-child,
@@ -4057,8 +4102,8 @@ a.frm_action_icon:hover {
 	margin-left: 15px;
 	float: right;
 	color: var(--primary-hover) !important;
-	font-size: 18px;
-	width: 18px;
+	font-size: 17px;
+	width: 17px;
 }
 
 .edit_field_type_end_divider .frm-field-action-icons {
@@ -4520,6 +4565,10 @@ li.selected .divider_section_only:before {
 	right: 0;
 }
 
+#frm-fake-page {
+	padding: 0 5px;
+}
+
 #frm-fake-page .frm-page-break,
 #frm-fake-page .frm-page-break:before,
 #frm-fake-page .frm-page-break:after {
@@ -4604,7 +4653,7 @@ li.selected .divider_section_only:before {
 	border-right: none;
 	height: 6px;
 	position: absolute;
-	width: 99%;
+	width: calc( 100% - 10px );
 	bottom: -15px;
 }
 
@@ -4851,6 +4900,7 @@ ul.frm-category-tabs {
 .start_divider.frm_sorting li.ui-state-default.frm_not_divider.selected,
 .start_divider.frm_sorting li.ui-state-default.frm_not_divider:hover,
 .frm_sorting li.ui-state-default.frm_not_divider:hover,
+.frm_sorting li.ui-state-default.ui-sortable-helper,
 .frm_sorting li.ui-state-default.edit_field_type_divider .divider_section_only:hover,
 .frm_sorting .repeat_section li.ui-state-default.edit_field_type_end_divider:hover,
 .frm_sorting li.ui-state-default.selected.edit_field_type_divider .divider_section_only,
@@ -5542,6 +5592,7 @@ ul .frm_col_two {
 	display: none;
 }
 
+.frm_sorting li.ui-state-default.ui-sortable-helper,
 .frmbutton.ui-sortable-helper {
 	transition: opacity .2s;
 	opacity: 1;
